tests/errors/polymorphism_polymorphic_instance.eff
type 'a cow = effect
 operation horn : 'a -> 'a
end ;;

let c = new cow ;;

#type c ;;

let milk = handler
 | c#horn x k -> let f y = k y in f x
;;

(* c used to get the type 'a cow *)
#type c ;;
